# Cpp-OpenGL-and-Widgets

./: .gitignore.txt  Project2.sln  README.md
Project2/: CMakeLists.txt  GLCanvas.cpp  GLCanvas.h  MainApp.cpp  MainFrame.cpp  MainFrame.h  Project2.aps  Project2.rc  Project2.vcxproj  Project2.vcxproj.filters  resource.h
Project2/x64/Debug/: Project2.exe.recipe  Project2.res  vc143.idb
Project2/x64/Debug/Project2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Project2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
